# lisaviz

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  pyproject.toml
benchmarks/: memory_profile.py  padding_memory.py
domain/: __init__.py  confidence.py  convergence.py  models.py  noise.py  repository.py  sampling.py
examples/: demo.py  export_autocorr.py  make_figures.py  render_skymap_real.py
ingestion/: __init__.py  hdf5_adapter.py  mock.py  pytables.py  streaming.py
tests/: test_architecture.py  test_cheatsheets.py  test_domain.py  test_heuristic_eval.py  test_ingestion.py  test_validation.py  test_visualization.py
validation/: __init__.py  straight_line.py
visualization/: __init__.py  cheatsheets.py  corner.py  encoding.py  fstat.py  health.py  heuristic_eval.py  population.py  reconstruction.py  stats.py
visualization/backends/: __init__.py  base.py  matplotlib_backend.py  plotly_backend.py
